--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
+    "disable-telemetry": "gatsby telemetry --disable",
     "lint": "eslint ./ --ext .js"
   },
   "repository": {
