--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,21 +9,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
 
-      - name: Install npm dependencies
-        run: npm install
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
 
       - name: Disable telemetry
-        run: npm run disable-telemetry
+        run: yarn disable-telemetry
+
+      - name: Lint
+        run: yarn lint
 
       - name: Build
-        run: npm run build
+        run: yarn build
 
       - name: Deploy
         uses: easingthemes/ssh-deploy@v2.1.2
