--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "disable-telemetry": "gatsby telemetry --disable",
-    "lint": "eslint ./ --ext .js"
+    "lint": "eslint ./ --ext .js,.ts,.tsx"
   },
   "repository": {
     "type": "git",
@@ -18,25 +18,27 @@
   "author": "@ErikSamuelsson",
   "license": "MIT",
   "homepage": "https://eriksamuelsson.com",
+  "eslintConfig": {
+    "extends": "@rektangel/eslint-config"
+  },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.5",
-    "@mdx-js/react": "^1.6.5",
-    "gatsby": "^2.23.3",
-    "gatsby-image": "^2.4.7",
-    "gatsby-plugin-feed": "^2.5.5",
-    "gatsby-plugin-mdx": "^1.2.15",
-    "gatsby-plugin-react-helmet": "^3.3.4",
-    "gatsby-plugin-sharp": "^2.6.11",
-    "gatsby-plugin-sitemap": "^2.4.5",
-    "gatsby-plugin-styled-components": "^3.3.4",
-    "gatsby-remark-copy-linked-files": "^2.3.5",
-    "gatsby-remark-images": "^3.3.10",
-    "gatsby-remark-prismjs": "^3.5.4",
-    "gatsby-source-filesystem": "^2.3.11",
-    "gatsby-transformer-remark": "^2.8.15",
-    "gatsby-transformer-sharp": "^2.5.5",
+    "@mdx-js/mdx": "^1.6.6",
+    "@mdx-js/react": "^1.6.6",
+    "gatsby": "^2.23.11",
+    "gatsby-image": "^2.4.9",
+    "gatsby-plugin-feed": "^2.5.7",
+    "gatsby-plugin-mdx": "^1.2.18",
+    "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-sitemap": "^2.4.7",
+    "gatsby-plugin-styled-components": "^3.3.6",
+    "gatsby-remark-copy-linked-files": "^2.3.7",
+    "gatsby-remark-images": "^3.3.13",
+    "gatsby-remark-prismjs": "^3.5.6",
+    "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-remark": "^2.8.19",
+    "gatsby-transformer-sharp": "^2.5.7",
     "prismjs": "^1.20.0",
-    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
@@ -45,13 +47,22 @@
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "@rektangel/eslint-config": "1.2.4",
+    "@types/react-helmet": "^6.0.0",
+    "@types/styled-components": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
-    "prettier": "^2.0.5"
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "prettier": "^2.0.5",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5"
   }
 }
