chore: 🤖 add conventional commits and only deploy on release

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,6 @@
     "skipLibCheck": true,
     "removeComments": true
   },
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "node_modules/**",
-    "public"
-  ]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules/**", "public"]
 }
-
