--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "disable-telemetry": "gatsby telemetry --disable",
-    "lint": "eslint ./ --ext .js,.ts,.tsx"
+    "lint": "tsc --noEmit && eslint ./ --ext .js,.ts,.tsx",
+    "release": "yarn release && git push --follow-tags origin master"
   },
   "repository": {
     "type": "git",
@@ -21,23 +22,28 @@
   "eslintConfig": {
     "extends": "@rektangel/eslint-config"
   },
+  "standard-version": {
+    "scripts": {
+      "prerelease": "yarn lint"
+    }
+  },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.6",
     "@mdx-js/react": "^1.6.6",
-    "gatsby": "^2.23.21",
-    "gatsby-image": "^2.4.12",
-    "gatsby-plugin-feed": "^2.5.10",
-    "gatsby-plugin-mdx": "^1.2.22",
-    "gatsby-plugin-react-helmet": "^3.3.9",
-    "gatsby-plugin-sharp": "^2.6.18",
-    "gatsby-plugin-sitemap": "^2.4.10",
-    "gatsby-plugin-styled-components": "^3.3.9",
-    "gatsby-remark-copy-linked-files": "^2.3.10",
-    "gatsby-remark-images": "^3.3.17",
-    "gatsby-remark-prismjs": "^3.5.9",
-    "gatsby-source-filesystem": "^2.3.18",
-    "gatsby-transformer-remark": "^2.8.23",
-    "gatsby-transformer-sharp": "^2.5.10",
+    "gatsby": "^2.24.1",
+    "gatsby-image": "^2.4.13",
+    "gatsby-plugin-feed": "^2.5.11",
+    "gatsby-plugin-mdx": "^1.2.25",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sharp": "^2.6.19",
+    "gatsby-plugin-sitemap": "^2.4.11",
+    "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-remark-copy-linked-files": "^2.3.11",
+    "gatsby-remark-images": "^3.3.18",
+    "gatsby-remark-prismjs": "^3.5.10",
+    "gatsby-source-filesystem": "^2.3.19",
+    "gatsby-transformer-remark": "^2.8.25",
+    "gatsby-transformer-sharp": "^2.5.11",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -47,9 +53,11 @@
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
+    "@commitlint/cli": "^9.0.1",
+    "@commitlint/config-conventional": "^9.0.1",
     "@rektangel/eslint-config": "1.2.6",
     "@types/react-helmet": "^6.0.0",
-    "@types/styled-components": "^5.1.0",
+    "@types/styled-components": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.4.0",
@@ -61,7 +69,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.5",
+    "husky": "^4.2.5",
     "prettier": "^2.0.5",
+    "standard-version": "^8.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
   }
