--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.6",
     "@mdx-js/react": "^1.6.6",
-    "gatsby": "^2.24.1",
+    "gatsby": "^2.24.2",
     "gatsby-image": "^2.4.13",
-    "gatsby-plugin-feed": "^2.5.11",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-mdx": "^1.2.25",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.19",
@@ -42,7 +42,6 @@
     "gatsby-remark-images": "^3.3.18",
     "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-source-filesystem": "^2.3.19",
-    "gatsby-transformer-remark": "^2.8.25",
     "gatsby-transformer-sharp": "^2.5.11",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
@@ -55,11 +54,11 @@
   "devDependencies": {
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-conventional": "^9.0.1",
-    "@rektangel/eslint-config": "1.2.6",
+    "@rektangel/eslint-config": "1.2.7",
     "@types/react-helmet": "^6.0.0",
     "@types/styled-components": "^5.1.1",
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "@typescript-eslint/parser": "^3.5.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -68,7 +67,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.5",
+    "eslint-plugin-react-hooks": "^4.0.6",
     "husky": "^4.2.5",
     "prettier": "^2.0.5",
     "standard-version": "^8.0.0",
