--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.18",
     "@mdx-js/react": "^1.6.18",
+    "fontsource-montserrat": "^3.0.9",
     "gatsby": "^2.24.77",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-feed-mdx": "^1.0.1",
@@ -48,8 +49,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.0",
-    "styled-normalize": "^8.0.7",
-    "typeface-montserrat": "1.1.13"
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
