--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Personal homepage of Erik Samuelsson",
   "main": "index.js",
   "scripts": {
-    "start": "gatsby develop",
-    "develop": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "disable-telemetry": "gatsby telemetry --disable",
+    "start": "gatsby telemetry --disable && gatsby develop",
+    "develop": "gatsby telemetry --disable && gatsby develop",
+    "build": "gatsby telemetry --disable && gatsby build",
+    "serve": "gatsby telemetry --disable && gatsby serve",
     "lint": "tsc --noEmit && eslint ./ --ext .js,.ts,.tsx",
     "release": "yarn standard-version && git push --follow-tags origin master"
   },
@@ -28,50 +27,50 @@
     }
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.18",
-    "@mdx-js/react": "^1.6.18",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "fontsource-montserrat": "^3.0.9",
-    "gatsby": "^2.24.82",
-    "gatsby-image": "^2.4.21",
+    "gatsby": "^2.28.0",
+    "gatsby-image": "^2.7.0",
     "gatsby-plugin-feed-mdx": "^1.0.1",
-    "gatsby-plugin-mdx": "^1.2.48",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.6.43",
-    "gatsby-plugin-sitemap": "^2.4.17",
-    "gatsby-plugin-styled-components": "^3.3.14",
-    "gatsby-remark-copy-linked-files": "^2.3.19",
-    "gatsby-remark-images": "^3.3.36",
-    "gatsby-remark-prismjs": "^3.5.16",
-    "gatsby-source-filesystem": "^2.3.35",
-    "gatsby-transformer-sharp": "^2.5.18",
+    "gatsby-plugin-mdx": "^1.6.0",
+    "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-sharp": "^2.10.0",
+    "gatsby-plugin-sitemap": "^2.8.0",
+    "gatsby-plugin-styled-components": "^3.6.0",
+    "gatsby-remark-copy-linked-files": "^2.6.0",
+    "gatsby-remark-images": "^3.7.0",
+    "gatsby-remark-prismjs": "^3.9.0",
+    "gatsby-source-filesystem": "^2.7.0",
+    "gatsby-transformer-sharp": "^2.8.0",
     "prismjs": "^1.22.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.0",
+    "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@rektangel/eslint-config": "1.5.0",
+    "@rektangel/eslint-config": "1.5.1",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.13.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "husky": "^4.3.0",
-    "prettier": "^2.1.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.4",
+    "prettier": "^2.2.1",
     "standard-version": "^9.0.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "ts-node": "^9.1.0",
+    "typescript": "^4.1.2"
   }
 }
