--- a/package.json
+++ b/package.json
@@ -27,23 +27,23 @@
     }
   },
   "dependencies": {
+    "@fontsource/montserrat": "^4.1.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "fontsource-montserrat": "^3.1.5",
-    "gatsby": "^2.29.1",
+    "gatsby": "^2.29.3",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-feed-mdx": "^1.0.1",
-    "gatsby-plugin-mdx": "^1.7.0",
+    "gatsby-plugin-mdx": "^1.7.1",
     "gatsby-plugin-react-helmet": "^3.7.0",
-    "gatsby-plugin-sharp": "^2.11.1",
+    "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-plugin-sitemap": "^2.9.0",
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-remark-copy-linked-files": "^2.7.0",
-    "gatsby-remark-images": "^3.8.0",
+    "gatsby-remark-images": "^3.8.1",
     "gatsby-remark-prismjs": "^3.10.0",
-    "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-source-filesystem": "^2.8.1",
     "gatsby-transformer-sharp": "^2.9.0",
-    "prismjs": "^1.22.0",
+    "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -56,20 +56,20 @@
     "@rektangel/eslint-config": "1.5.1",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "eslint": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.6",
     "prettier": "^2.2.1",
-    "standard-version": "^9.0.0",
+    "standard-version": "^9.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
