chore: 🤖 change base from eriksamuelsson.com to samuelsson.dev

--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,5 +1,5 @@
 {
-  "name": "ErikSamuelsson GraphQL Schema",
+  "name": "Samuelsson GraphQL Schema",
   "schemaPath": "schema.graphql",
   "extensions": {
     "endpoints": {
