--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eriksamuelsson",
+  "name": "samuelsson-homepage",
   "version": "1.3.14",
   "description": "Personal homepage of Erik Samuelsson",
   "main": "index.js",
@@ -13,11 +13,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/samuelsson/eriksamuelsson.git"
+    "url": "git://github.com/samuelsson/samuelsson-homepage.git"
   },
   "author": "@ErikSamuelsson",
   "license": "MIT",
-  "homepage": "https://eriksamuelsson.com",
+  "homepage": "https://samuelsson.dev",
   "eslintConfig": {
     "extends": "@rektangel/eslint-config"
   },
