chore: 🤖 update some urls to match new domain name

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "git://github.com/samuelsson/samuelsson-homepage.git"
   },
-  "author": "@ErikSamuelsson",
+  "author": "Erik Samuelsson (https://samuelsson.dev)",
   "license": "MIT",
   "homepage": "https://samuelsson.dev",
   "eslintConfig": {
