chore: 🤖 bump package to latest
Husky is now using prepare script so some code changes done as well.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "gatsby telemetry --disable && gatsby build",
     "serve": "gatsby telemetry --disable && gatsby serve",
     "lint": "tsc --noEmit && eslint ./ --ext .js,.ts,.tsx",
-    "release": "yarn standard-version && git push --follow-tags origin master"
+    "release": "yarn standard-version && git push --follow-tags origin master",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,7 @@
   "license": "MIT",
   "homepage": "https://samuelsson.dev",
   "eslintConfig": {
-    "extends": "@rektangel/eslint-config"
+    "extends": "@samuelsson/eslint-config"
   },
   "standard-version": {
     "scripts": {
@@ -27,50 +28,50 @@
     }
   },
   "dependencies": {
-    "@fontsource/montserrat": "^4.2.1",
+    "@fontsource/montserrat": "^4.2.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "gatsby": "^2.32.3",
-    "gatsby-image": "^2.11.0",
+    "gatsby": "^3.3.1",
+    "gatsby-image": "^3.3.0",
     "gatsby-plugin-feed-mdx": "^1.1.0",
-    "gatsby-plugin-mdx": "^1.10.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.1",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-plugin-styled-components": "^3.10.0",
-    "gatsby-remark-copy-linked-files": "^2.10.0",
-    "gatsby-remark-images": "^3.11.0",
-    "gatsby-remark-prismjs": "^3.13.0",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-transformer-sharp": "^2.12.0",
+    "gatsby-plugin-mdx": "^2.3.0",
+    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.3.1",
+    "gatsby-plugin-sitemap": "^3.3.0",
+    "gatsby-plugin-styled-components": "^4.3.0",
+    "gatsby-remark-copy-linked-files": "^4.0.0",
+    "gatsby-remark-images": "^5.0.0",
+    "gatsby-remark-prismjs": "^5.0.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-sharp": "^3.3.0",
     "prismjs": "^1.23.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.2.3",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@rektangel/eslint-config": "1.5.1",
-    "@types/react-helmet": "^6.1.0",
-    "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "eslint": "^7.20.0",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@samuelsson/eslint-config": "1.6.0",
+    "@types/react-helmet": "^6.1.1",
+    "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.8",
+    "husky": "^6.0.0",
     "prettier": "^2.2.1",
-    "standard-version": "^9.1.1",
+    "standard-version": "^9.2.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.4"
   }
 }
