--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.3.1",
-    "gatsby-image": "^3.3.0",
     "gatsby-plugin-feed-mdx": "^1.1.0",
+    "gatsby-plugin-image": "^1.3.1",
     "gatsby-plugin-mdx": "^2.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-sharp": "^3.3.1",
