--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gatsby-remark-images": "^5.7.0",
     "gatsby-remark-prismjs": "^5.7.0",
     "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-styled-components-dark-mode": "^2.0.3",
     "gatsby-transformer-sharp": "^3.10.0",
     "prismjs": "^1.24.1",
     "react": "^17.0.2",
