--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@samuelsson/eslint-config": "1.6.2",
+    "@types/mdx-js__react": "^1.5.4",
     "@types/react-helmet": "^6.1.2",
     "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
